--- a/web/index.html
+++ b/web/index.html
@@ -5,16 +5,18 @@
     <title>PostitUI</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script async defer src="js/jquery-3.4.1.min.js"></script>
+    <script async defer src="js/popper.min.js"></script>
+    <script async defer src="js/bootstrap.min.js"></script>
+    <script async defer src="js/main.js"></script>
+
+    <script async defer src="main.dart.js"></script>
+
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="img/postit-01.png">
     <link rel="stylesheet" href="css/icon.css">
 
-    <script defer src="js/jquery-3.4.1.min.js"></script>
-    <script defer src="js/popper.min.js"></script>
-    <script defer src="js/bootstrap.min.js"></script>
-    <script defer src="js/main.js"></script>
-
-    <script defer src="main.dart.js"></script>
   </head>
   <body>
     <postit-app>
