--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -79,30 +79,29 @@
                 <material-list-item @deferred [routerLink]="InnerRoutePaths.dash_home.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="home"></material-icon>Home
                 </material-list-item>
-                <material-list-item [routerLink]="InnerRoutePaths.create_post.toUrl()" [routerLinkActive]="'active_side'">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.create_post.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="add_circle"></material-icon>Create Post
                 </material-list-item>
-                <material-list-item [routerLink]="InnerRoutePaths.view_post.toUrl()" [routerLinkActive]="'active_side'">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.view_post.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="visibility"></material-icon>View Post
                 </material-list-item>
-                <material-list-item [routerLink]="InnerRoutePaths.manage_post.toUrl()" [routerLinkActive]="'active_side'">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.manage_post.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="timer"></material-icon>Manage Post
                 </material-list-item>
-                <material-list-item [routerLink]="InnerRoutePaths.post_engagement.toUrl()" [routerLinkActive]="'active_side'">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.post_engagement.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="chat"></material-icon>Engagement
                 </material-list-item>
                 <div label class="my-2 text-dark">Accounts</div>
-                <material-list-item [routerLink]="InnerRoutePaths.post_account.toUrl()" [routerLinkActive]="'active_side'">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.post_account.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="person"></material-icon>Post Accounts
                 </material-list-item>
-                <material-list-item [routerLink]="InnerRoutePaths.setting.toUrl()" [routerLinkActive]="'active_side'">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.setting.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="settings"></material-icon>Settings
                 </material-list-item>
             </div>
             <!-- This group has a label -->
         </material-list>
     </material-drawer>
-
 
     <!--Page Content-->
     <material-content>
