Changes at post engagement component

--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -133,14 +133,14 @@
         <div class="w-100 mr-auto ml-auto" id="html-body">
             <router-outlet [routes]="InnerRoutes.all"></router-outlet>
 
-            <div class="position-fixed" id="floating-nav">
+            <!--<div class="position-fixed" id="floating-nav">
                 <button type="button" class="btn rounded-circle border-0 shadow-c" (click)="goBack()">
                     <span class="fa fa-chevron-left text-muted"></span>
                 </button>
                 <button type="button" class="btn rounded-circle border-0 shadow-c" (click)="goForward()">
                     <span class="fa fa-chevron-right text-muted"></span>
                 </button>
-            </div>
+            </div>-->
         </div>
     </material-content>
     <!--/Page Content-->
