--- a/lib/src/home_component/home_component.html
+++ b/lib/src/home_component/home_component.html
@@ -7,17 +7,17 @@
                     <div class="display-custom text-center mt-5 mt-lg-0">
                         <img src="img/postit-logo-new.png" alt="Postit-home" class="img-fluid">
                     </div>
-                    <div class="row mt-5 mt-lg-2">
+                    <div class="row mt-3 mt-lg-2">
                         <div class="col-6" style="border-right: 1px solid #ababab">
                             <div class="text-muted">
                                 Market digitally with the all new
                                 Postit platform. <br> <hr width="100px">
                                 
                                 <div class="row my-1 px-3 text-dark">
-                                    <span class="mx-auto cursor-pointer fab fa-facebook"></span>
-                                    <span class="mx-auto cursor-pointer fab fa-twitter"></span>
-                                    <span class="mx-auto cursor-pointer fab fa-instagram"></span>
-                                    <span class="mx-auto cursor-pointer fab fa-linkedin-in"></span>
+                                    <span class="mx-auto cursor-pointer fa fa-facebook"></span>
+                                    <span class="mx-auto cursor-pointer fa fa-twitter"></span>
+                                    <span class="mx-auto cursor-pointer fa fa-instagram"></span>
+                                    <span class="mx-auto cursor-pointer fa fa-linkedin"></span>
                                 </div>
                             </div>
                         </div>
