--- a/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
+++ b/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
@@ -7,7 +7,7 @@
                 <span class="font-weight-bold">Comments <small>from</small> All</span>
             </div>
             <div class="w-100 p-2 post-card-container">
-                <div class="card w-100 mb-2 br-10 cursor-pointer" *ngFor="let allPostEngagement of allPostEngagements; let $i = index" (click)="loadChat($i)">
+                <div class="card w-100 mb-2 br-10 cursor-pointer" *ngFor="let allPostEngagement of allPostEngagements; let $i = index" (click)="showChat($i)">
                     <div class="card-body">
                         <div class="row w-100 m-0">
                             <div class="col-3 my-auto">
@@ -42,6 +42,7 @@
         </div>
         <div class="col-sm-12 col-md-7 chat-container m-0 p-0" *ngIf="chatShow">
             <div class="w-100 text-center p-2 box-three br-20 my-auto">
+                <span class="fa fa-chevron-left text-primary mx-2 float-left pt-1" (click)="hideChat()"></span>
                 <span class="font-weight-bold">Engagement Room</span>
                 <span class="fa fa-home mx-2 text-primary"></span>
             </div>
@@ -50,11 +51,11 @@
                     <span class="text-center text-muted font-weight-bold fa fa-cloud"></span>
                 </div>
             </div>
-            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty">
+            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box">
                 <div class="text-center w-100" style="height: max-content;">
                     <span class="table-bordered p-2 small see-older-messages">See older comments</span>
                 </div>
-                <div class="w-100 m-0 px-2">
+                <div class="w-100 m-0 px-2" style="padding-bottom: 100px">
                     <div *ngFor="let chat of chats; let $i = index">
                         <div class="{{chat.status}} px-3 py-2 mt-5">
                             <div class="nt-center forward-call">
@@ -64,7 +65,7 @@
                             </div>
                             <div class="name small font-weight-bold issuer">{{chat.issuer}}</div>
                             <div class="comment" style="font-size: 14px;">{{chat.message}}</div>
-                            <div class="date text-left text-dark font-weight-bold mt-3" style="font-size: 9px;">10 Feb 2020 - 12:00am</div>
+                            <div class="date text-left text-dark font-weight-bold mt-2 w-auto" style="font-size: 9px;">{{chat.date}}</div>
                         </div>
                     </div>
                     <!--<div class="sender ml-auto px-3 py-2 mt-5">
@@ -84,10 +85,10 @@
                         <span class="fa fa-smile-o fa-2x mx-2"></span>
                     </div>
                     <div class="col-8 m-auto p-0">
-                        <input type="text" class="nt-form-control" style="border-radius: 20px;" placeholder="Type your message here ...">
+                        <input type="text" class="nt-form-control" [(ngModel)]="message" (keyup.enter)="sendComment()" style="border-radius: 20px;" placeholder="Type your message here ...">
                     </div>
                     <div class="col-2 m-auto p-0 text-center">
-                        <div class="nt-circle bg-success" style="width: 2.25rem !important; height: 2.25rem !important;">
+                        <div class="nt-circle bg-success cursor-pointer" (click)="sendComment()" style="width: 2.25rem !important; height: 2.25rem !important;">
                             <span class="fa fa-paper-plane text-white"></span>
                         </div>
                     </div>
@@ -145,11 +146,11 @@
                     <span class="text-center text-muted font-weight-bold fa fa-cloud"></span>
                 </div>
             </div>
-            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty">
+            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box">
                 <div class="text-center w-100" style="height: max-content;">
                     <span class="table-bordered p-2 small see-older-messages">See older comments</span>
                 </div>
-                <div class="w-100 m-0 px-2">
+                <div class="w-100 m-0 px-2" style="padding-bottom: 100px">
                     <div *ngFor="let chat of chats; let $i = index">
                         <div class="{{chat.status}} px-3 py-2 mt-5">
                             <div class="nt-center forward-call">
@@ -159,7 +160,7 @@
                             </div>
                             <div class="name small font-weight-bold issuer">{{chat.issuer}}</div>
                             <div class="comment" style="font-size: 14px;">{{chat.message}}</div>
-                            <div class="date text-left text-dark font-weight-bold mt-3" style="font-size: 9px;">10 Feb 2020 - 12:00am</div>
+                            <div class="date text-left text-dark font-weight-bold mt-2 w-auto" style="font-size: 9px;">{{chat.date}}</div>
                         </div>
                     </div>
                     <!--<div class="sender ml-auto px-3 py-2 mt-5">
@@ -179,10 +180,10 @@
                         <span class="fa fa-smile-o fa-2x mx-2"></span>
                     </div>
                     <div class="col-8 m-auto p-0">
-                        <input type="text" class="nt-form-control" style="border-radius: 20px;" placeholder="Type your message here ...">
+                        <input type="text" class="nt-form-control" [(ngModel)]="message" (keyup.enter)="sendComment()" style="border-radius: 20px;" placeholder="Type your message here ...">
                     </div>
                     <div class="col-2 m-auto p-0 text-center">
-                        <div class="nt-circle bg-success" style="width: 2.25rem !important; height: 2.25rem !important;">
+                        <div class="nt-circle bg-success cursor-pointer" (click)="sendComment()" style="width: 2.25rem !important; height: 2.25rem !important;">
                             <span class="fa fa-paper-plane text-white"></span>
                         </div>
                     </div>
