--- a/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
+++ b/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
@@ -51,7 +51,7 @@
                     <span class="text-center text-muted font-weight-bold fa fa-cloud"></span>
                 </div>
             </div>
-            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box">
+            <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box-mob">
                 <div class="text-center w-100" style="height: max-content;">
                     <span class="table-bordered p-2 small see-older-messages">See older comments</span>
                 </div>
