Changes on home and about

--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -449,8 +449,7 @@
 
                         <div *ngIf="currentPosts.isEmpty">
                             <div class="nt-center text-muted" style="width: max-content;">
-                                <span class="fa fa-cloud text-muted mr-1"></span>
-                                Nothing created yet
+                                <img src="img/no-data.png" alt="no-data" class="img-fluid mt-2" width="200">
                             </div>
                         </div>
                         <div *ngIf="loading">
