--- a/lib/src/home_component/home_component.html
+++ b/lib/src/home_component/home_component.html
@@ -1,18 +1,19 @@
 <div class="row m-0 p-0">
     <div class="col-lg-6 col-md-12 col-sm-12 px-0" style="height: 100vh; width: 100vw; overflow-x: hidden; overflow-y: scroll; box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, 0.16) !important;">
         <nav-app></nav-app>
-        <div class="container">
-            <div class="px-5 pb-sm-5">
-                <div class="mb-2">
-                    <div class="display-custom text-center mt-5 mt-lg-0">
+        <div class="container nt-center mt-3 mt-md-5">
+            <div class="px-2">
+                <div class="mb-2 px-3 px-md-4 box-one shadow" style="border-top-right-radius: 50px; border-bottom-left-radius: 50px; border-top-left-radius: 10px; border-bottom-right-radius: 10px">
+                    <div class="display-custom text-center my-3 my-md-0">
                         <img src="img/postit-logo-new.png" alt="Postit-home" class="img-fluid">
                     </div>
-                    <div class="row mt-3 mt-lg-2">
-                        <div class="col-6" style="border-right: 1px solid #ababab">
+                    <div class="row my-3 my-md-0 px-3 pt-1 pb-5">
+                        <div class="col-6">
                             <div class="text-muted">
                                 Market digitally with the all new
-                                Postit platform. <br> <hr width="100px">
-                                
+                                Postit platform.
+                                <br> <hr width="100px">
+
                                 <div class="row my-1 px-3 text-dark">
                                     <span class="mx-auto cursor-pointer fa fa-facebook"></span>
                                     <span class="mx-auto cursor-pointer fa fa-twitter"></span>
@@ -21,10 +22,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 first">
                             <div class="text-muted">
-                                Don't be left out. Sign up now and grow your
-                                business.
+                                Don't be left out. <b>Sign up now and explore</b>
                                 <button type="button" class="btn btn-block btn-light br-20 mt-2" (click)="gotoAbout()">About <span class="fa fa-arrow-right ml-1"></span></button>
                             </div>
                         </div>
