--- a/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
+++ b/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
@@ -48,7 +48,7 @@
             </div>
             <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isEmpty">
                 <div class="nt-center">
-                    <span class="text-center text-muted font-weight-bold fa fa-cloud"></span>
+                    <img src="img/display_chat.png" alt="click-to-display-chat-icon" class="img-fluid">
                 </div>
             </div>
             <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box-mob">
@@ -59,24 +59,17 @@
                     <div *ngFor="let chat of chats; let $i = index">
                         <div class="{{chat.status}} px-3 py-2 mt-5">
                             <div class="nt-center forward-call">
-                                <div class="nt-circle bg-dark" style="cursor: pointer;">
+                                <div class="nt-circle bg-dark" style="cursor: pointer;" (click)="replyComment($i)">
                                     <span class="fa fa-reply text-white"></span>
+                                </div>
+                                <div class="nt-circle bg-dark" style="cursor: pointer;" (click)="like(el)">
+                                    <span class="fa fa-thumbs-up text-white" #el></span>
                                 </div>
                             </div>
                             <div class="name small font-weight-bold issuer">{{chat.issuer}}</div>
                             <div class="comment" style="font-size: 14px;">{{chat.message}}</div>
-                            <div class="date text-left text-dark font-weight-bold mt-2 w-auto" style="font-size: 9px;">{{chat.date}}</div>
                         </div>
                     </div>
-                    <!--<div class="sender ml-auto px-3 py-2 mt-5">
-                        <div class="nt-center forward-call">
-                            <div class="nt-circle bg-dark" style="cursor: pointer;">
-                                <span class="fa fa-reply text-white"></span>
-                            </div>
-                        </div>
-                        <div class="r-comment" style="font-size: 14px;">Great product right there!</div>
-                        <div class="s-date text-right text-dark font-weight-bold mt-3" style="font-size: 9px; position: absolute; right: 0; top: auto;">10 Feb 2020 - 12:00am</div>
-                    </div>-->
                 </div>
             </div>
             <div class="w-100 chat-engine p-2 bg-light br-20">
@@ -85,7 +78,7 @@
                         <span class="fa fa-smile-o fa-2x mx-2"></span>
                     </div>
                     <div class="col-8 m-auto p-0">
-                        <input type="text" class="nt-form-control" [(ngModel)]="message" (keyup.enter)="sendComment()" style="border-radius: 20px;" placeholder="Type your message here ...">
+                        <input type="text" class="nt-form-control" [(ngModel)]="message" (keyup.enter)="sendComment()" style="border-radius: 20px;" placeholder="Type your message here ..." id="chat-area">
                     </div>
                     <div class="col-2 m-auto p-0 text-center">
                         <div class="nt-circle bg-success cursor-pointer" (click)="sendComment()" style="width: 2.25rem !important; height: 2.25rem !important;">
@@ -98,8 +91,8 @@
     </div>
     <div class="row m-0 p-0 main-container br-20 d-none d-md-flex d-lg-flex">
         <div class="col-sm-12 col-md-5 post-container m-0 p-0">
-            <div class="w-100 text-center p-2 box-three br-20 mb-2">
-                <span class="fa fa-commenting mx-2 text-primary"></span>
+            <div class="w-100 text-center p-2 box-three br-20 mb-2 shadow">
+                <span class="fa fa-commenting mr-2 text-primary"></span>
                 <span class="font-weight-bold">Comments <small>from</small> All</span>
             </div>
             <div class="w-100 p-2 post-card-container">
@@ -136,14 +129,14 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-7 chat-container m-0 p-0 box-two br-20">
+        <div class="col-sm-12 col-md-7 chat-container m-0 p-0 box-one br-20 shadow">
             <div class="w-100 text-center p-2 box-three br-20 shadow my-auto">
                 <span class="font-weight-bold">Engagement Room</span>
                 <span class="fa fa-home mx-2 text-primary"></span>
             </div>
             <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isEmpty">
                 <div class="nt-center">
-                    <span class="text-center text-muted font-weight-bold fa fa-cloud"></span>
+                    <img src="img/display_chat.png" alt="click-to-display-chat-icon" class="img-fluid">
                 </div>
             </div>
             <div class="row w-100 m-0 px-0 py-2 chat-box" *ngIf="chats.isNotEmpty" id="chat-box">
@@ -154,13 +147,15 @@
                     <div *ngFor="let chat of chats; let $i = index">
                         <div class="{{chat.status}} px-3 py-2 mt-5">
                             <div class="nt-center forward-call">
-                                <div class="nt-circle bg-dark" style="cursor: pointer;">
+                                <div class="nt-circle bg-dark" style="cursor: pointer;" (click)="replyComment($i)">
                                     <span class="fa fa-reply text-white"></span>
+                                </div>
+                                <div class="nt-circle bg-dark" style="cursor: pointer;" (click)="like(el)">
+                                    <span class="fa fa-thumbs-up text-white" #el></span>
                                 </div>
                             </div>
                             <div class="name small font-weight-bold issuer">{{chat.issuer}}</div>
                             <div class="comment" style="font-size: 14px;">{{chat.message}}</div>
-                            <div class="date text-left text-dark font-weight-bold mt-2 w-auto" style="font-size: 9px;">{{chat.date}}</div>
                         </div>
                     </div>
                     <!--<div class="sender ml-auto px-3 py-2 mt-5">
@@ -180,7 +175,7 @@
                         <span class="fa fa-smile-o fa-2x mx-2"></span>
                     </div>
                     <div class="col-8 m-auto p-0">
-                        <input type="text" class="nt-form-control" [(ngModel)]="message" (keyup.enter)="sendComment()" style="border-radius: 20px;" placeholder="Type your message here ...">
+                        <input type="text" class="nt-form-control" [(ngModel)]="message" (keyup.enter)="sendComment()" style="border-radius: 20px;" placeholder="Type your message here ..." id="chat-area">
                     </div>
                     <div class="col-2 m-auto p-0 text-center">
                         <div class="nt-circle bg-success cursor-pointer" (click)="sendComment()" style="width: 2.25rem !important; height: 2.25rem !important;">
